yaml/ace-dash-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ace-dash-ingress
  namespace: ace
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
      - ace-dash.upstream-1-25-6-643d6b687ab93581d24420becac24aae-0000.au-syd.containers.appdomain.cloud
  rules:
    - host: ace-dash.upstream-1-25-6-643d6b687ab93581d24420becac24aae-0000.au-syd.containers.appdomain.cloud
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: db-prod-dash
              port:
                number: 8300
